--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta nam="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vida saúdavel</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="cssExterno/select.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <body>
@@ -20,21 +22,30 @@
     <div class="container1">
         <div>
             <label class="comida">Nome da comida:</label>
-            <input type="text" class="inputs">
+            <input type="text" class="inputs" id="nome">
 
             <label class="comida">Escolha o dia da semana que você deseja salvar essa comida:</label>
-            <select multiple data-placeholder="Escolha o dia">
-                <option>Segunda-Feira</option>
-                <option>Terça-Feira</option>
-                <option>Quarta-Feira</option>
-                <option>Quinta-Feira</option>
-                <option>Sexta-Feira</option>
-                <option>Sabado</option>
-                <option>Domingo</option>
+            <select multiple data-placeholder="Escolha o dia" id="select-dias">
+                <option value="1">Segunda-Feira</option>
+                <option value="2">Terça-Feira</option>
+                <option value="3">Quarta-Feira</option>
+                <option value="4">Quinta-Feira</option>
+                <option value="5">Sexta-Feira</option>
+                <option value="6">Sabado</option>
+                <option value="7">Domingo</option>
             </select>
         </div>
     </div>
+    <div class="button-adicionar">
+        <button type="button" class="btn btn-outline-success" id="button-adicionar" onclick="montarTabela()">Adicionar</button>
+    </div>
+
+    <div id="tabela">
+
+    </div>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="JS/geral.js"></script>
 </body>
+
 </html>
