Trocando o nome da função no JS e no button

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
         </div>
     </div>
     <div class="button-adicionar">
-        <button type="button" class="btn btn-outline-success" id="button-adicionar" onclick="montarTabela()">Adicionar</button>
+        <button type="button" class="btn btn-outline-success" id="button-adicionar" onclick="pegandoInfo()">Adicionar</button>
     </div>
 
     <div id="tabela">
-
+        
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
