Adicionando nova função e mais estilização no CSS

--- a/index.html
+++ b/index.html
@@ -37,11 +37,24 @@
         </div>
     </div>
     <div class="button-adicionar">
-        <button type="button" class="btn btn-outline-success" id="button-adicionar" onclick="pegandoInfo()">Adicionar</button>
+        <button type="button" class="btn btn-outline-success" id="button-salvar" onclick="salvar()">Salvar</button>
     </div>
 
     <div id="tabela">
-        
+        <table>
+            <thead>
+                <th class="dias-semana">Segunda-Feira</th>
+                <th class="dias-semana">Terça-Feira</th>
+                <th class="dias-semana">Quarta-Feira</th>
+                <th class="dias-semana">Quinta-Feira</th>
+                <th class="dias-semana">Sexta-Feira</th>
+                <th class="dias-semana">Sabado</th>
+                <th class="dias-semana">Domingo</th>
+            </thead>
+            <tbody>
+
+            </tbody>
+        </table>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
