--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="cssExterno/select.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
@@ -26,20 +27,20 @@
 
             <label class="comida">Escolha o dia da semana que você deseja salvar essa comida:</label>
             <select multiple data-placeholder="Escolha o dia" id="select-dias">
-                <option value="1">Segunda-Feira</option>
-                <option value="2">Terça-Feira</option>
-                <option value="3">Quarta-Feira</option>
-                <option value="4">Quinta-Feira</option>
-                <option value="5">Sexta-Feira</option>
-                <option value="6">Sabado</option>
-                <option value="7">Domingo</option>
+                <option value="0">Segunda-Feira</option>
+                <option value="1">Terça-Feira</option>
+                <option value="2">Quarta-Feira</option>
+                <option value="3">Quinta-Feira</option>
+                <option value="4">Sexta-Feira</option>
+                <option value="5">Sabado</option>
+                <option value="6">Domingo</option>
             </select>
         </div>
     </div>
     <div class="button-adicionar">
         <button type="button" class="btn btn-outline-success" id="button-salvar" onclick="salvar()">Salvar</button>
+        <button type="button" class="btn btn-secondary" id="button-imc">IMC</button>
     </div>
-
     <div id="tabela">
         <table>
             <thead>
@@ -51,8 +52,7 @@
                 <th class="dias-semana">Sabado</th>
                 <th class="dias-semana">Domingo</th>
             </thead>
-            <tbody>
-
+            <tbody id="informacao">
             </tbody>
         </table>
     </div>
